# bulk-server

./: CMakeLists.txt  README.md  client.cpp  main.cpp  server.h
.github/worflows/: release.yml
.github/workflows/: release.yml
lib/: assignments.h  handler.cpp  handler.h  logger.cpp  logger.h  session.h  state.cpp  state.h
